clang/test/BSC/Negative/Method/ambiguous_7/ambiguous_7.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

unsigned double int::f1() { // expected-error {{'double' cannot be signed or unsigned}}
    return 0;
}

unsigned float const int::f2() { // expected-error {{'float' cannot be signed or unsigned}}
    return 0;
}

unsigned _Bool int::f3() { // expected-error {{'_Bool' cannot be signed or unsigned}}
    return 0;
}

int main() {
    return 0;
}